--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "csv-parser": "^3.2.0",
     "csv-writer": "^1.6.0",
+    "decimal.js": "^10.5.0",
     "dotenv": "^16.5.0",
     "ethers": "^6.14.1"
   }
